# jarv

./: .gitignore  LICENSE  README.md  interactive_menu_objective.py  interactive_menu_objective_2.py  jarv.py  pyproject.toml
.claude/: settings.local.json
demos/: README.md  _record-common.ps1  publish.ps1  record-all.ps1  record.ps1  retime.py
jarv/: __init__.py  agent.py  agent_ui.py  anthropic_http.py  artifacts.py  auditor.py  cancellation.py  cli.py  clipboard.py  command_input.py  command_menu.py  command_registry.py  commands.py  config.py  config_schema.py  context_budget.py  display.py  edit_tool.py  gemini_http.py  headsup.py  history.py  history_convert.py  http_transport.py  interactive_command.py  intro_animation.py  jsonutil.py  litellm_compat.py  model_catalog.py  openai_http.py  orchestrator.py  paths.py  pdf_extract.py  project_context.py  provider.py  provider_auth.py  provider_catalog.py  provider_registry.py  read_only_display.py  read_tool.py  reasoning.py  (+39 more)
packaging/: pyinstaller_launcher.py
scripts/: benchmark_latency.py  generate_release_metadata.py  install.ps1  install.sh  uninstall.ps1  uninstall.sh
tests/: conftest.py  headsup_harness.py  test_agent_input.py  test_agent_ui.py  test_anthropic_http.py  test_auditor.py  test_cancellation.py  test_cleanup_helpers.py  test_cli_stdin.py  test_clipboard.py  test_command_input.py  test_command_menu.py  test_context_budget.py  test_display.py  test_edit_tool.py  test_headsup.py  test_headsup_harness.py  test_history.py  test_http_transports.py  test_interactive_command.py  test_jsonutil.py  (+38 more)
(+15 files in other folders)
