[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "jarv"
version = "0.1.0"
description = "A simple OpenAI-powered CLI agent"
requires-python = ">=3.9"
dependencies = ["openai>=1.0", "rich"]

[project.scripts]
jarv = "jarv:main"

[tool.setuptools]
py-modules = ["jarv"]
